@@ -157,7 +157,7 @@
    abbreviations.
   </para>
   <para>
-   The combo box labeled <quote>Abbrev set</quote> selects the
+   The combo box labelled <quote>Abbrev set</quote> selects the
    abbreviation set to edit. The first entry, <quote>global</quote>, contains
    abbreviations available in all edit modes. The subsequent
    entries correspond to each mode's local set of abbreviations.
